ansible/ec2.yaml
Resources:

  Vpc:
    Description: test vpc for classroom work
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: VpcBoor

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: joyridesg
      VpcId: !Ref Vpc
      GroupDescription: Allow http to client host
      SecurityGroupIngress:
      - IpProtocol: TCP
        FromPort: 3000
        ToPort: 3000
        CidrIp: 0.0.0.0/0
      - IpProtocol: TCP
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: -1
        FromPort: -1
        ToPort: -1
        CidrIp: 0.0.0.0/0
  
  SubnetReit:
      Type: AWS::EC2::Subnet
      Properties:
        CidrBlock:  10.0.1.0/16
        AvailabilityZone: !Select [ 0, !GetAZs '' ]
        VpcId: !Ref Vpc

  PublicSubnet2RouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
          RouteTableId: !Ref PublicRouteTable
          SubnetId: !Ref SubnetReit

  InternetGateway:
      Type: AWS::EC2::InternetGateway
      Properties:
          Tags:
              - Key: Name
                Value: Gatway1
          
  InternetGatewayAttachment:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
          InternetGatewayId: !Ref InternetGateway
          VpcId: !Ref Vpc


  PublicRouteTable:
      Type: AWS::EC2::RouteTable
      Properties: 
        VpcId: !Ref Vpc
        Tags:
        - Key: Name
          Value: RtBoor

  DefaultPublicRoute: 
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties: 
        RouteTableId: !Ref PublicRouteTable
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId: !Ref InternetGateway

  ApacheInstance:
      Properties:
        ImageId: "ami-084ac5efaaabdfc84"
        InstanceType: t3.micro
        AvailabilityZone: !Select [ 0, !GetAZs '' ]
        NetworkInterfaces: 
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet: 
          - Ref: InstanceSecurityGroup
          SubnetId: !Ref  SubnetReit
        #SubnetId: !Ref  SubnetReit
        #SecurityGroupIds:
        #  - !Ref InstanceSecurityGroup
        KeyName: joeykey
        Tags:
        - Key: Name
          Value: InstanceBoor
        
      Type: AWS::EC2::Instance
